--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <script src="https://kit.fontawesome.com/3930e90667.js" crossorigin="anonymous"></script>
-    <meta
-      name="description"
-      content="Simple project based todo manager."
-    />
+    <script
+      src="https://kit.fontawesome.com/3930e90667.js"
+      crossorigin="anonymous"
+    ></script>
+    <meta name="description" content="Simple project based todo manager." />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Project-Todo</title>
   </head>
   <body>
